@@ -57,8 +57,8 @@ documentation to see how to configure servers and subscriptions.
 A logger object used by thes handler. Not to be confused by the logger
 used by the application (either internally, or via a Middleware). Can
 be any object that can C<debug>, C<info>, C<warn>, C<error>. Defaults
-to an instance of L<Plack::Handler::Stomp::StupidLogger>. This logger
-is passed on to the L<Net::Stomp> object held in C<connection> (see
+to an instance of L<Net::Stomp::StupidLogger>. This logger is passed
+on to the L<Net::Stomp> object held in C<connection> (see
 L<Net::Stomp::MooseHelpers::CanConnect>).
 
 =cut
@@ -69,8 +69,8 @@ has logger => (
     lazy_build => 1,
 );
 sub _build_logger {
-    require Plack::Handler::Stomp::StupidLogger;
-    Plack::Handler::Stomp::StupidLogger->new();
+    require Net::Stomp::StupidLogger;
+    Net::Stomp::StupidLogger->new();
 }
 
 sub _build_connection {
