@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - drop our own StupidLogger, use Net::Stomp::StupidLogger
 
 1.09      2014-07-14 17:18:35+01:00 Europe/London
  - require Net::Stomp::MooseHelpers 2.6 for newer failover handling
